--- a/serverless.yaml
+++ b/serverless.yaml
@@ -35,15 +35,6 @@ custom:
       - If: '"${self:custom.enableMultiTenancy}" == "true"'
         Exclude:
           - resources.extensions.ApiGatewayMethodMetadataGet
-          - resources.extensions.ApiGatewayMethodTenantTenantidVarMetadataGet
-        Set:
-          functions.fhirServer.events.0.http.path: '/{tenantId}/' 
-          functions.fhirServer.events.1.http.path: '/{tenantId}/{proxy+}' 
-          functions.fhirServer.events.2.http.path: /{tenantId}/metadata
-
-      - If: '"${self:custom.enableMultiTenancy}" == "true"'
-        Exclude:
-          - resources.extensions.ApiGatewayMethodMetadataGet
         Set:
           functions.fhirServer.events.0.http.path: '/tenant/{tenantId}/' 
           functions.fhirServer.events.1.http.path: '/tenant/{tenantId}/{proxy+}' 
@@ -127,6 +118,7 @@ provider:
     throttle:
       burstLimit: 100 # maximum API request rate limit over a time ranging from one to a few seconds
       rateLimit: 50 # average requests per second over an extended period of time
+  variableSyntax: "\\${((?!AWS)[ ~:a-zA-Z0-9._@'\",\\-\\/\\(\\)]+?)}" # Use this for allowing CloudFormation Pseudo-Parameters in your serverless.yml
   logs:
     restApi:
       format: '{"authorizer.claims.sub":"$context.authorizer.claims.sub","error.message":"$context.error.message","extendedRequestId":"$context.extendedRequestId","httpMethod":"$context.httpMethod","identity.sourceIp":"$context.identity.sourceIp","integration.error":"$context.integration.error","integration.integrationStatus":"$context.integration.integrationStatus","integration.latency":"$context.integration.latency","integration.requestId":"$context.integration.requestId","integration.status":"$context.integration.status","path":"$context.path","requestId":"$context.requestId","responseLatency":"$context.responseLatency","responseLength":"$context.responseLength","stage":"$context.stage","status":"$context.status"}'
@@ -423,10 +415,9 @@ resources:
               KeyType: HASH
             - AttributeName: vid
               KeyType: RANGE
-          BillingMode: PAY_PER_REQUEST
           StreamSpecification:
             StreamViewType: NEW_AND_OLD_IMAGES
-          PointInTimeRecoverySpecification:
+          PointInTimeRecoverySpecification: 
             PointInTimeRecoveryEnabled: true
           SSESpecification:
             KMSMasterKeyId: !Ref DynamodbKMSKey
@@ -699,7 +690,7 @@ resources:
                       Action:
                         - 'lambda:InvokeFunction'
                       Resource:
-                        - !ImportValue 'fhir-service-validator-lambda-${self:custom.stage}'
+                        - Fn::ImportValue: "fhir-service-validator-lambda-${self:custom.stage}"
                     - !Ref AWS::NoValue
       DdbToEsLambdaRole:
         Type: AWS::IAM::Role
