--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "serverless-bundle": "^4.4.0",
     "serverless-offline": "^8.2.0",
     "serverless-step-functions": "^3.1.1",
+    "serverless-plugin-ifelse": "^1.0.7",
     "sinon": "^9.0.2",
     "tmp-promise": "^3.0.2",
     "ts-jest": "^26.4.4",
