TopicName: added stack name as prefix.
This is required to be able to deploy in multiple times in the account.

--- a/cloudformation/subscriptions.yaml
+++ b/cloudformation/subscriptions.yaml
@@ -85,7 +85,7 @@ Resources:
   SubscriptionsTopic:
     Type: AWS::SNS::Topic
     Properties:
-      TopicName: 'SubscriptionsTopic'
+      TopicName: !Sub '${AWS::StackName}-SubscriptionsTopic'
       KmsMasterKeyId: !Ref SubscriptionsKey
 
   RestHookSubscription:
