--- a/package.json
+++ b/package.json
@@ -37,16 +37,18 @@
     "aws-embedded-metrics": "^2.0.4",
     "aws-sdk": "^2.1000.0",
     "axios": "^0.21.4",
-    "fhir-works-on-aws-authz-rbac": "5.0.0",
-    "fhir-works-on-aws-interface": "12.0.0",
-    "fhir-works-on-aws-persistence-ddb": "3.10.1",
-    "fhir-works-on-aws-routing": "6.4.1",
-    "fhir-works-on-aws-search-es": "3.11.0",
+    "fhir-works-on-aws-authz-rbac": "link:../fhir-works-on-aws-authz-rbac",
+    "fhir-works-on-aws-interface": "link:../fhir-works-on-aws-interface",
+    "fhir-works-on-aws-persistence-ddb": "link:../fhir-works-on-aws-persistence-ddb",
+    "fhir-works-on-aws-routing": "link:../fhir-works-on-aws-routing",
+    "fhir-works-on-aws-search-es": "link:../fhir-works-on-aws-search-es",
     "lodash": "^4.17.21",
     "p-settle": "^4.1.1",
     "serverless-http": "^2.7.0",
     "tslib": "^2.3.1",
-    "yargs": "^16.2.0"
+    "yargs": "^16.2.0",
+	"cors": "^2.8.5",
+	"@types/cors": "^2.8.7"
   },
   "devDependencies": {
     "@types/chance": "^1.1.1",
