--- a/buildspec.yml
+++ b/buildspec.yml
@@ -36,17 +36,12 @@ artifacts:
     - 'buildspec-deploy.yml'
 
 reports:
-  # Binding via weak naming convention: This name is part of the ReportGroup Name, being created in the cdh-pipeline
-  # By changing the name the binding can easily get broken see "!Join [ '-', [!Ref CDHDicomWebCodeBuild, !Ref CDHTestReportGroupName]]" of CDHDicomWebCodeBuildReportGroup inside cdh-pipeline.yml 
+  # Binding via weak naming convention: This name is part of the ReportGroup Name, being created in the fhirworks-pipeline
+  # By changing the name the binding can easily get broken see "!Join [ '-', [!Ref FhirWorksCodeBuild, !Ref FhirWorksTestReportGroupName]]" of FhirWorksCodeBuildReportGroup inside fhirworks-pipeline.yml 
   # https://docs.aws.amazon.com/codebuild/latest/userguide/test-report-group-naming.html
   # https://docs.aws.amazon.com/codebuild/latest/userguide/report-group-create.html
   fhir_works_test_report: 
     files:
-     - dicomweb-service-report.xml
+     - fhir-works-on-aws-interface-reports.xml
     base-directory: ./test-reports
     file-format: JUNITXML
-  cdh_coverage_report: 
-    files:
-     - dicomweb-service-coverage-report.xml
-    base-directory: ./coverage-reports
-    file-format: CLOVERXML
