--- a/buildspec.yml
+++ b/buildspec.yml
@@ -35,13 +35,13 @@ artifacts:
     - 'fhirworks.tgz'
     - 'buildspec-deploy.yml'
 
-reports:
-  # Binding via weak naming convention: This name is part of the ReportGroup Name, being created in the fhirworks-pipeline
-  # By changing the name the binding can easily get broken see "!Join [ '-', [!Ref FhirWorksCodeBuild, !Ref FhirWorksTestReportGroupName]]" of FhirWorksCodeBuildReportGroup inside fhirworks-pipeline.yml 
-  # https://docs.aws.amazon.com/codebuild/latest/userguide/test-report-group-naming.html
-  # https://docs.aws.amazon.com/codebuild/latest/userguide/report-group-create.html
-  cdh_test_report: 
-    files:
-     - fhir-works-on-aws-interface-reports.xml
-    base-directory: ./test-reports
-    file-format: JUNITXML
+# reports:
+#   # Binding via weak naming convention: This name is part of the ReportGroup Name, being created in the fhirworks-pipeline
+#   # By changing the name the binding can easily get broken see "!Join [ '-', [!Ref FhirWorksCodeBuild, !Ref FhirWorksTestReportGroupName]]" of FhirWorksCodeBuildReportGroup inside fhirworks-pipeline.yml 
+#   # https://docs.aws.amazon.com/codebuild/latest/userguide/test-report-group-naming.html
+#   # https://docs.aws.amazon.com/codebuild/latest/userguide/report-group-create.html
+#   cdh_test_report: 
+#     files:
+#      - fhir-works-on-aws-interface-reports.xml
+#     base-directory: ./test-reports
+#     file-format: JUNITXML
