--- a/buildspec.yml
+++ b/buildspec.yml
@@ -41,7 +41,7 @@ reports:
   # By changing the name the binding can easily get broken see "!Join [ '-', [!Ref FhirWorksCodeBuild, !Ref FhirWorksTestReportGroupName]]" of FhirWorksCodeBuildReportGroup inside fhirworks-pipeline.yml 
   # https://docs.aws.amazon.com/codebuild/latest/userguide/test-report-group-naming.html
   # https://docs.aws.amazon.com/codebuild/latest/userguide/report-group-create.html
-  cdh_test_report: 
+  fhir_works_test_report: 
     files:
      - fhir-works-on-aws-interface-reports.xml
     base-directory: ../fhirworks/test-reports
