--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint-fix": "eslint --fix . --ext .ts,.tsx",
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest --silent --passWithNoTests --testPathPattern=src/*",
+    "test": "jest --silent --passWithNoTests --testPathPattern=src/* --ci --testResultsProcessor=jest-junit",
     "int-test": "jest --testPathPattern=integration-test/* --runInBand",
     "test-coverage": "jest --coverage --testPathPattern=src/*",
     "release": "yarn run build && yarn run lint && yarn run test",
@@ -34,9 +34,11 @@
   },
   "dependencies": {
     "@types/aws-lambda": "^8.10.92",
+    "@types/cors": "^2.8.7",
     "aws-embedded-metrics": "^2.0.4",
     "aws-sdk": "^2.1000.0",
     "axios": "^0.21.4",
+    "cors": "^2.8.5",
     "fhir-works-on-aws-authz-rbac": "link:../fhir-works-on-aws-authz-rbac",
     "fhir-works-on-aws-interface": "link:../fhir-works-on-aws-interface",
     "fhir-works-on-aws-persistence-ddb": "link:../fhir-works-on-aws-persistence-ddb",
@@ -46,9 +48,7 @@
     "p-settle": "^4.1.1",
     "serverless-http": "^2.7.0",
     "tslib": "^2.3.1",
-    "yargs": "^16.2.0",
-	"cors": "^2.8.5",
-	"@types/cors": "^2.8.7"
+    "yargs": "^16.2.0"
   },
   "devDependencies": {
     "@types/chance": "^1.1.1",
@@ -68,6 +68,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
+    "jest-junit": "^14.0.1",
     "jest-mock-extended": "^1.0.8",
     "jsonwebtoken": "^8.5.1",
     "prettier": "^2.4.1",
@@ -75,8 +76,8 @@
     "serverless": "2.71.0",
     "serverless-bundle": "^4.4.0",
     "serverless-offline": "^8.2.0",
-    "serverless-step-functions": "^3.1.1",
     "serverless-plugin-ifelse": "^1.0.7",
+    "serverless-step-functions": "^3.1.1",
     "sinon": "^9.0.2",
     "tmp-promise": "^3.0.2",
     "ts-jest": "^26.4.4",
