--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "lint-fix": "eslint --fix . --ext .ts,.tsx",
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest --silent --passWithNoTests --testPathPattern=src/* --ci --testResultsProcessor=jest-junit",
-    "int-test": "jest --testPathPattern=integration-test/* --runInBand",
+    "test": "jest --silent --passWithNoTests --testPathPattern=src/*",
+    "int-test": "jest --testPathPattern=integration-test/* --runInBand --ci --testResultsProcessor=jest-junit",
     "test-coverage": "jest --coverage --testPathPattern=src/*",
     "release": "yarn run build && yarn run lint && yarn run test",
     "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/*",
