--- a/buildspec-deploy.yml
+++ b/buildspec-deploy.yml
@@ -34,8 +34,7 @@ phases:
         - PACKAGE=../fhirworks
         - mkdir $PACKAGE
         - mkdir -p $PACKAGE/fhir-works-on-aws-deployment && cp -r . $PACKAGE/fhir-works-on-aws-deployment
-        - (cd $PACKAGE/fhir-works-on-aws-deployment && yarn install)
-        - yarn run int-test
+        - (cd $PACKAGE/fhir-works-on-aws-deployment && yarn install & yarn run int-test)
 
 artifacts:
   files:
