--- a/buildspec-deploy.yml
+++ b/buildspec-deploy.yml
@@ -27,14 +27,12 @@ phases:
           SERVICE_ENDPOINT=$(grep 'ServiceEndpoint: ' fhirworks/fhir-works-on-aws-deployment/Info_Output.log | sed 's/^.*: //') && echo "SERVICE_ENDPOINT=$SERVICE_ENDPOINT"
           aws ssm put-parameter --name "$STAGE_NAME-fhirworks-url" --value "$SERVICE_ENDPOINT" --type "String" --overwrite
           echo "{ \"ServiceEndpoint\": \"$SERVICE_ENDPOINT\" }" > fw-deploy-output.json
+
         - API_URL=$SERVICE_ENDPOINT && echo "API_URL=$SERVICE_ENDPOINT"
         - API_KEY=dummy && echo "API_KEY=$API_KEY"
         - API_AWS_REGION=$REGION && echo "API_AWS_REGION=$REGION"
         - COGNITO_CLIENT_ID=$CLIENT_ID && echo "COGNITO_CLIENT_ID=$CLIENT_ID"
-        - PACKAGE=../fhirworks
-        - mkdir $PACKAGE
-        - mkdir -p $PACKAGE/fhir-works-on-aws-deployment && cp -r . $PACKAGE/fhir-works-on-aws-deployment
-        - (cd $PACKAGE/fhir-works-on-aws-deployment && yarn install & yarn run int-test)
+        - (cd fhirworks/fhir-works-on-aws-deployment && yarn install & yarn run int-test)
 
 artifacts:
   files:
