--- a/buildspec-deploy.yml
+++ b/buildspec-deploy.yml
@@ -32,7 +32,7 @@ phases:
         - API_AWS_REGION=$REGION && echo "API_AWS_REGION=$REGION"
         - COGNITO_CLIENT_ID=$CLIENT_ID && echo "COGNITO_CLIENT_ID=$CLIENT_ID"
         - (cd fhirworks/fhir-works-on-aws-deployment && ls)
-        - (cd fhirworks/fhir-works-on-aws-deployment && yarn install & yarn run int-test)
+        - (cd fhirworks/fhir-works-on-aws-deployment && yarn run int-test)
 
 artifacts:
   files:
