--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "fhir-works-on-aws-search-es": "link:../fhir-works-on-aws-search-es",
     "lodash": "^4.17.21",
     "p-settle": "^4.1.1",
-    "serverless-http": "^2.7.0",
+    "serverless-http": "^3.2.0",
     "tslib": "^2.3.1",
     "yargs": "^16.2.0",
 	"cors": "^2.8.5",
@@ -72,10 +72,10 @@
     "jsonwebtoken": "^8.5.1",
     "prettier": "^2.4.1",
     "qs": "^6.10.1",
-    "serverless": "2.71.0",
-    "serverless-bundle": "^4.4.0",
-    "serverless-offline": "^8.2.0",
-    "serverless-step-functions": "^3.1.1",
+    "serverless": "^3.3.0",
+    "serverless-bundle": "^6.0.0",
+    "serverless-offline": "^12.0.0",
+    "serverless-step-functions": "^3.13.1",
     "serverless-plugin-ifelse": "^1.0.7",
     "sinon": "^9.0.2",
     "tmp-promise": "^3.0.2",
@@ -97,7 +97,7 @@
     "xmlhttprequest-ssl": "^1.6.2",
     "postcss": "^8.2.10",
     "underscore": "^1.12.1",
-    "http-errors": "1.8.0",
+    "http-errors": "2.0.0",
     "glob-parent": "^5.1.2",
     "ws": "^7.4.6",
     "trim-newlines": "^3.0.1",
