--- a/serverless.yaml
+++ b/serverless.yaml
@@ -118,13 +118,14 @@ provider:
     GRANT_ACCESS_ALL_TENANTS_SCOPE: '${self:custom.grantAccessAllTenantsScope}'
     ENABLE_SUBSCRIPTIONS: !Ref EnableSubscriptions
     LOG_LEVEL: '${self:custom.logLevel}'
-  apiKeys:
-    - name: 'developer-key-${self:custom.stage}' # Full name must be known at package-time
-      description: Key for developer to access the FHIR Api
-  usagePlan:
-    throttle:
-      burstLimit: 100 # maximum API request rate limit over a time ranging from one to a few seconds
-      rateLimit: 50 # average requests per second over an extended period of time
+  apiGateway:
+    apiKeys:
+      - name: 'developer-key-${self:custom.stage}' # Full name must be known at package-time
+        description: Key for developer to access the FHIR Api
+    usagePlan:
+      throttle:
+        burstLimit: 100 # maximum API request rate limit over a time ranging from one to a few seconds
+        rateLimit: 50 # average requests per second over an extended period of time
   logs:
     restApi:
       format: '{"authorizer.claims.sub":"$context.authorizer.claims.sub","error.message":"$context.error.message","extendedRequestId":"$context.extendedRequestId","httpMethod":"$context.httpMethod","identity.sourceIp":"$context.identity.sourceIp","integration.error":"$context.integration.error","integration.integrationStatus":"$context.integration.integrationStatus","integration.latency":"$context.integration.latency","integration.requestId":"$context.integration.requestId","integration.status":"$context.integration.status","path":"$context.path","requestId":"$context.requestId","responseLatency":"$context.responseLatency","responseLength":"$context.responseLength","stage":"$context.stage","status":"$context.status"}'
@@ -175,6 +176,7 @@ functions:
       - http:
           method: OPTIONS
           path: /metadata
+      
     handler: src/index.handler
     provisionedConcurrency: 5
     environment:
@@ -197,6 +199,7 @@ functions:
           batchSize: 15 # Lambda payload size limit ~6MB; DDB row limit ~400KB = 15 items
           maximumRetryAttempts: 3
           startingPosition: LATEST
+      
 
   subscriptionsMatcher:
     timeout: 20
@@ -216,6 +219,7 @@ functions:
           maximumRetryAttempts: 3
           startingPosition: LATEST
           enabled: ${self:custom.enableSubscriptions} # will only run if opted into subscription feature
+      
 
   startExportJob:
     timeout: 30
@@ -277,7 +281,7 @@ functions:
     environment:
       ELASTICSEARCH_DOMAIN_ENDPOINT: !Join ['', ['https://', !GetAtt ElasticSearchDomain.DomainEndpoint]]
       NUMBER_OF_SHARDS: !If [isDev, 1, 3] # 133 indices, one per resource types
-    
+
   subscriptionReaper:
     timeout: 30
     runtime: nodejs14.x
@@ -288,6 +292,7 @@ functions:
       - schedule:
           rate: rate(5 minutes)
           enabled: ${self:custom.enableSubscriptions} # will only run if opted into subscription feature
+      
 
   subscriptionsRestHook:
     timeout: 10
@@ -302,6 +307,7 @@ functions:
           batchSize: 50
           maximumBatchingWindow: 10
           functionResponseType: ReportBatchItemFailures
+      
 
 stepFunctions:
   stateMachines:
