feat: Set SLS_DEBUG on build

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/*",
     "local": "node .",
     "compile-igs": "ts-node scripts/compile-igs.ts",
-    "serverless-deploy": "serverless deploy",
+    "serverless-deploy": "SLS_DEBUG=* serverless deploy",
     "serverless-package": "serverless package",
     "serverless-remove": "serverless remove",
     "serverless-info": "serverless info"
