--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "serverless-deploy": "SLS_DEBUG=* serverless deploy",
     "serverless-package": "serverless package",
     "serverless-remove": "serverless remove",
-    "serverless-info": "serverless info"
+    "serverless-info": "serverless info", 
+    "serverless-doctor": "serverless doctor"
   },
   "dependencies": {
     "@types/aws-lambda": "^8.10.92",
