--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
 	"cors": "^2.8.5",
 	"@types/cors": "^2.8.7"
   },
+  "overrides": {
+    "triple-beam": "1.3.0"
+  },
   "devDependencies": {
     "@types/chance": "^1.1.1",
     "@types/express": "^4.17.2",
