--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
 	"@types/cors": "^2.8.7"
   },
   "overrides": {
-    "triple-beam": "1.3.0"
+    "triple-beam@>1.0.0 <2": "1.3.0"
   },
   "devDependencies": {
     "@types/chance": "^1.1.1",
