--- a/package.json
+++ b/package.json
@@ -50,9 +50,6 @@
 	"cors": "^2.8.5",
 	"@types/cors": "^2.8.7"
   },
-  "overrides": {
-    "triple-beam@>1.0.0 <2": "1.3.0"
-  },
   "devDependencies": {
     "@types/chance": "^1.1.1",
     "@types/express": "^4.17.2",
@@ -111,7 +108,8 @@
     "json-schema": "^0.4.0",
     "nanoid": "^3.1.31",
     "async": "^3.2.2",
-    "moment": "2.29.2"
+    "moment": "2.29.2", 
+    "triple-beam": "1.3.0"
   },
   "jest": {
     "moduleFileExtensions": [
